# lfn-games

./: CMakeLists.txt
include/: entity.h  snake.h
src/: entity.cpp  main.cpp  snake.cpp
